--- a/standardSearch/templates/home.html
+++ b/standardSearch/templates/home.html
@@ -22,6 +22,15 @@
 	      </div>
             </div>
 	  </div>
+      {% endfor %}
+      {% for error in errors %}
+	  <div class="card mt-2">
+	    <div class="card-body">
+	      <div class="card-text">
+		  {{ error }}
+	      </div>
+            </div>
+	  </div>
 	  {% endfor %}
        </div>
    </div>
