Switched to chart.js; works with test data from dummy flask server.

--- a/frontend/twitter-sentiment/src/TwForm.css
+++ b/frontend/twitter-sentiment/src/TwForm.css
@@ -4,7 +4,7 @@
 
 #tw-form {
     min-height: 100vh;
-    background-color: var(--bk-dark);
+    background-color: var(--bkgd-dark);
 }
 
 #tw-form-container {
