--- a/react-flask-app/src/index.css
+++ b/react-flask-app/src/index.css
@@ -1,3 +1,43 @@
+/* ======================================================================
+ * GLOBAL CSS VARIABLES
+ * ====================================================================== */
+
+:root {
+  /* Body-colors */
+  --bk-dark: #02141f;
+  --bk-light: #d3d3d3;
+
+  /* Window-colors */
+  --window-light: #1da1f2;
+  --window-dark: rgba(0, 0, 0, 0.5);
+
+  /* Font-colors */
+  --text-light: rgb(211, 211, 211);
+  --text-dark: rgb(29, 29, 29);
+
+  /* Font-sizes */
+  --h1-size: 80px;
+  --h2-size: 40px;
+  --h3-size: 30px;
+  --h4-size: 20px;
+
+  --txt-size: 16px;
+}
+
+/* ======================================================================
+ * GLOBAL RESET
+ * ====================================================================== */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* ======================================================================
+ * BASE (HTML, BODY, MAIN)
+ * ====================================================================== */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +45,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
